# ToDoList

./: .env.example  .gitignore  README.md  example.env  main.py  project_manager.py  projects.py  pyproject.toml  tasks.py  test.py
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 07b5ec264c5b_add_models.py  cf6fcaca617c_add_closed_at_column_to_tasks.py
app/api/: routers.py
app/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
app/api/controllers_schema/: __init__.py
app/api/controllers_schema/requests/: projects_request_schema.py  tasks_request_schema.py
app/api/controllers_schema/responses/: projects_responses_schema.py  tasks_responses_schema.py
app/cli/: __init__.py  console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: session.py
app/exceptions/: repository_exceptions.py  service_exceptions.py
app/models/: project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: project_services.py  projects.py  task_services.py
